# ezTetris

./: CMakeLists.txt  README.md  note.md  purposes.md
include/: board.h  constants.h  game.h  tetromino.h
src/: board.cpp  game.cpp  main.cpp  tetromino.cpp
